# dischord-rs

./: Cargo.toml  MML.md  README.md
composer/: Cargo.toml
composer/src/: lib.rs  tokenize.rs
composer/src/generate/: effects.rs  mod.rs  note.rs  tones.rs
composer/src/parse/: mod.rs  note.rs  octave.rs  repeat.rs  tempo.rs  tone.rs  volume.rs
composer/tests/: generate.rs  parse.rs  tokenize.rs
lame/: Cargo.toml
lame/src/: lib.rs
src/: main.rs
