[package]
name = "dischord-rs"
version = "0.1.0"
authors = ["Raclett3 <im@s283.net>"]
edition = "2018"

[workspace]
members = ["composer", "lame"]

[dependencies]
composer = {"path" = "./composer"}
cpal = "0.13"
lame = {"path" = "./lame"}
serenity = {version = "0.10", default-features = false, features = ["cache", "client", "framework", "gateway", "rustls_backend", "standard_framework", "model", "voice"]}
songbird = "0.1.6"
tokio = {version = "1.5", features = ["macros", "rt", "rt-multi-thread", "time"]}
